pushing .gitignore so I can host it on my git account and fetch it through url instead of having hard reference to the text in my config

--- a/emacs.org
+++ b/emacs.org
@@ -221,72 +221,7 @@ Calling the default and official Windows' C++ compiler MSVC (Microsoft Visual C+
 
 #+begin_src emacs-lisp
 
-  ;;  (defvar msbuild-old-path-var (getenv "PATH"))
-  ;;
-  ;;  ;; The command below sets enviroment variable for MSVC - 2017 and x64 building target
-  ;;  (defun msbuild-2017-x64-setup ()
-  ;;    "Set enviorment variables to load Microsoft Visual C++ Compiler (MSVC) 64 bits"
-  ;;    (interactive)
-  ;;    (message "Setting 64 bits building tools.")
-  ;;    (setenv "PATH" msbuild-old-path-var)
-  ;;    (setenv "INCLUDE"
-  ;;	    (concat
-  ;;	     "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.12.25827/ATLMFC/include"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.12.25827/include"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/NETFXSDK/4.6.1/include/um"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/10/include/10.0.16299.0/ucrt"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/10/include/10.0.16299.0/shared"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/10/include/10.0.16299.0/um"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/10/include/10.0.16299.0/winrt"
-  ;;	     ))
-  ;;
-  ;;    (setenv "LIB"
-  ;;	    (concat
-  ;;	     "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.12.25827/ATLMFC/lib/x64"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.12.25827/lib/x64"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/NETFXSDK/4.6.1/lib/um/x64"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/10/lib/10.0.16299.0/ucrt/x64"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/10/lib/10.0.16299.0/um/x64"             
-  ;;	     ))
-  ;;
-  ;;    (setenv  "LIBPATH"
-  ;;	     (concat
-  ;;	      "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.12.25827/ATLMFC/lib/x64"
-  ;;	      ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.12.25827/lib/x64"
-  ;;	      ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.12.25827/lib/x64/store/references"
-  ;;	      ";" "C:/Program Files (x86)/Windows Kits/10/UnionMetadata/10.0.16299.0"
-  ;;	      ";" "C:/Program Files (x86)/Windows Kits/10/References/10.0.16299.0"
-  ;;	      ";" "C:/Windows/Microsoft.NET/Framework/v4.0.30319"
-  ;;	      ))
-  ;;
-  ;;    (setenv "PATH"
-  ;;	    (concat
-  ;;	     (getenv "PATH")
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.12.25827/bin/HostX86/x64"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/Common7/IDE/VC/VCPackages"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/Common7/IDE/CommonExtensions/Microsoft/TestWindow"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/Common7/IDE/CommonExtensions/Microsoft/TeamFoundation/Team Explorer"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/MSBuild/15.0/bin/Roslyn"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/Team Tools/Performance Tools"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/Shared/Common/VSPerfCollectionTools/"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft SDKs/Windows/v10.0A/bin/NETFX 4.6.1 Tools/"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft SDKs/F#/4.1/Framework/v4.0/"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/10/bin/x64"
-  ;;	     ";" "C:/Program Files (x86)/Windows Kits/10/bin/10.0.16299.0/x64"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community//MSBuild/15.0/bin"
-  ;;	     ";" "C:/Windows/Microsoft.NET/Framework/v4.0.30319"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/Common7/IDE/"
-  ;;	     ";" "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/Common7/Tools/"
-  ;;	     )))
-
-  ;; commands to compile file related to current c++ buffer.
-  (defun compile-msvc-x64 ()
-    (interactive)
-    (msbuild-2017-x64-setup)
-    (let ((compile-command (format "cl.exe \"%s\""
-                                   (file-name-nondirectory (buffer-file-name))))
-          (compilation-ask-about-save nil))
-      (call-interactively #'compile )))
+  ;; set whenever you decide to actually use MSVC as compiler
 
 #+end_src
 
@@ -1262,8 +1197,9 @@ We also use [[https://github.com/sebastiencs/company-box][company-box]] to furth
     :custom
     (company-minimum-prefix-length 1)
     (company-idle-delay 0.0)
-    :bind (:map company-active-map
-                ("<tab>" . company-complete-selection))
+    :bind
+    (:map company-active-map
+          ("<tab>" . company-complete-selection))
     (:map lsp-mode-map
           ("<tab>" . company-indent-or-complete-common))
     :hook
